Dodanie integracji CSRF

--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -14,12 +14,19 @@ http {
         ssl_certificate_key /etc/nginx/ca.key;
         root         /usr/share/nginx/html;
 
-        limit_req zone=one burst=5;
+
 
         location / {
             include /etc/nginx/uwsgi_params;
             uwsgi_pass uwsgi:5000;
         }
+
+        location /login/ {
+            include /etc/nginx/uwsgi_params;
+            uwsgi_pass uwsgi:5000;
+            limit_req zone=one burst=5;
+        }
+
     }
 
 }
